parser/parser.output
State 78 conflicts: 6 shift/reduce


Grammar

    0 $accept: line $end

    1 line: system
    2     | line system
    3     | error

    4 system: SLASH rootregex SLASH
    5       | CONST ID EQUAL system

    6 rootregex: rootregex AMP rootregex
    7          | NOT seq
    8          | seq

    9 seq: regex
   10    | seq regex
   11    | LPAR seq RPAR
   12    | seq LPAR seq RPAR
   13    | alt

   14 regex: term
   15      | repeat

   16 alt: seq PIPE seq

   17 repeat: regex ASTRK
   18       | regex PLUS
   19       | regex QUES

   20 term: QUOTE multiliteral QUOTE
   21     | range
   22     | wild
   23     | substitute
   24     | error

   25 range: LBIG multiregterm RBIG
   26      | LBIG CAP multiregterm RBIG

   27 wild: WILD

   28 substitute: LCUR ID RCUR

   29 multiregterm: regterm
   30             | multiregterm regterm

   31 regterm: anychar
   32        | ESC RBIG
   33        | QUOTE

   34 multiliteral: literal
   35             | multiliteral literal

   36 literal: anychar
   37        | ESC QUOTE
   38        | RBIG

   39 anychar: UNICODE
   40        | PLUS
   41        | MINUS
   42        | CONST
   43        | EQUAL
   44        | AMP
   45        | NOT
   46        | LPAR
   47        | RPAR
   48        | PIPE
   49        | QUES
   50        | LBIG
   51        | ESC ESC
   52        | ASTRK
   53        | WILD
   54        | LCUR
   55        | RCUR
   56        | ID
   57        | OTHERCHAR


Terminals, with rules where they appear

$end (0) 0
error (256) 3 24
SLASH (258) 4
CONST (259) 5 42
EQUAL (260) 5 43
AMP (261) 6 44
NOT (262) 7 45
LPAR (263) 11 12 46
RPAR (264) 11 12 47
PLUS (265) 18 40
PIPE (266) 16 48
ASTRK (267) 17 52
ESC (268) 32 37 51
QUES (269) 19 49
UNICODE (270) 39
QUOTE (271) 20 33 37
LBIG (272) 25 26 50
RBIG (273) 25 26 32 38
CAP (274) 26
WILD (275) 27 53
LCUR (276) 28 54
RCUR (277) 28 55
MINUS (278) 41
OTHERCHAR (279) 57
ID (280) 5 28 56


Nonterminals, with rules where they appear

$accept (26)
    on left: 0
line (27)
    on left: 1 2 3, on right: 0 2
system (28)
    on left: 4 5, on right: 1 2 5
rootregex (29)
    on left: 6 7 8, on right: 4 6
seq (30)
    on left: 9 10 11 12 13, on right: 7 8 10 11 12 16
regex (31)
    on left: 14 15, on right: 9 10 17 18 19
alt (32)
    on left: 16, on right: 13
repeat (33)
    on left: 17 18 19, on right: 15
term (34)
    on left: 20 21 22 23 24, on right: 14
range (35)
    on left: 25 26, on right: 21
wild (36)
    on left: 27, on right: 22
substitute (37)
    on left: 28, on right: 23
multiregterm (38)
    on left: 29 30, on right: 25 26 30
regterm (39)
    on left: 31 32 33, on right: 29 30
multiliteral (40)
    on left: 34 35, on right: 20 35
literal (41)
    on left: 36 37 38, on right: 34 35
anychar (42)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
    57, on right: 31 36


state 0

    0 $accept: . line $end

    error  shift, and go to state 1
    SLASH  shift, and go to state 2
    CONST  shift, and go to state 3

    line    go to state 4
    system  go to state 5


state 1

    3 line: error .

    $default  reduce using rule 3 (line)


state 2

    4 system: SLASH . rootregex SLASH

    error  shift, and go to state 6
    NOT    shift, and go to state 7
    LPAR   shift, and go to state 8
    QUOTE  shift, and go to state 9
    LBIG   shift, and go to state 10
    WILD   shift, and go to state 11
    LCUR   shift, and go to state 12

    rootregex   go to state 13
    seq         go to state 14
    regex       go to state 15
    alt         go to state 16
    repeat      go to state 17
    term        go to state 18
    range       go to state 19
    wild        go to state 20
    substitute  go to state 21


state 3

    5 system: CONST . ID EQUAL system

    ID  shift, and go to state 22


state 4

    0 $accept: line . $end
    2 line: line . system

    $end   shift, and go to state 23
    SLASH  shift, and go to state 2
    CONST  shift, and go to state 3

    system  go to state 24


state 5

    1 line: system .

    $default  reduce using rule 1 (line)


state 6

   24 term: error .

    $default  reduce using rule 24 (term)


state 7

    7 rootregex: NOT . seq

    error  shift, and go to state 6
    LPAR   shift, and go to state 8
    QUOTE  shift, and go to state 9
    LBIG   shift, and go to state 10
    WILD   shift, and go to state 11
    LCUR   shift, and go to state 12

    seq         go to state 25
    regex       go to state 15
    alt         go to state 16
    repeat      go to state 17
    term        go to state 18
    range       go to state 19
    wild        go to state 20
    substitute  go to state 21


state 8

   11 seq: LPAR . seq RPAR

    error  shift, and go to state 6
    LPAR   shift, and go to state 8
    QUOTE  shift, and go to state 9
    LBIG   shift, and go to state 10
    WILD   shift, and go to state 11
    LCUR   shift, and go to state 12

    seq         go to state 26
    regex       go to state 15
    alt         go to state 16
    repeat      go to state 17
    term        go to state 18
    range       go to state 19
    wild        go to state 20
    substitute  go to state 21


state 9

   20 term: QUOTE . multiliteral QUOTE

    CONST      shift, and go to state 27
    EQUAL      shift, and go to state 28
    AMP        shift, and go to state 29
    NOT        shift, and go to state 30
    LPAR       shift, and go to state 31
    RPAR       shift, and go to state 32
    PLUS       shift, and go to state 33
    PIPE       shift, and go to state 34
    ASTRK      shift, and go to state 35
    ESC        shift, and go to state 36
    QUES       shift, and go to state 37
    UNICODE    shift, and go to state 38
    LBIG       shift, and go to state 39
    RBIG       shift, and go to state 40
    WILD       shift, and go to state 41
    LCUR       shift, and go to state 42
    RCUR       shift, and go to state 43
    MINUS      shift, and go to state 44
    OTHERCHAR  shift, and go to state 45
    ID         shift, and go to state 46

    multiliteral  go to state 47
    literal       go to state 48
    anychar       go to state 49


state 10

   25 range: LBIG . multiregterm RBIG
   26      | LBIG . CAP multiregterm RBIG

    CONST      shift, and go to state 27
    EQUAL      shift, and go to state 28
    AMP        shift, and go to state 29
    NOT        shift, and go to state 30
    LPAR       shift, and go to state 31
    RPAR       shift, and go to state 32
    PLUS       shift, and go to state 33
    PIPE       shift, and go to state 34
    ASTRK      shift, and go to state 35
    ESC        shift, and go to state 50
    QUES       shift, and go to state 37
    UNICODE    shift, and go to state 38
    QUOTE      shift, and go to state 51
    LBIG       shift, and go to state 39
    CAP        shift, and go to state 52
    WILD       shift, and go to state 41
    LCUR       shift, and go to state 42
    RCUR       shift, and go to state 43
    MINUS      shift, and go to state 44
    OTHERCHAR  shift, and go to state 45
    ID         shift, and go to state 46

    multiregterm  go to state 53
    regterm       go to state 54
    anychar       go to state 55


state 11

   27 wild: WILD .

    $default  reduce using rule 27 (wild)


state 12

   28 substitute: LCUR . ID RCUR

    ID  shift, and go to state 56


state 13

    4 system: SLASH rootregex . SLASH
    6 rootregex: rootregex . AMP rootregex

    SLASH  shift, and go to state 57
    AMP    shift, and go to state 58


state 14

    8 rootregex: seq .
   10 seq: seq . regex
   12    | seq . LPAR seq RPAR
   16 alt: seq . PIPE seq

    error  shift, and go to state 6
    LPAR   shift, and go to state 59
    PIPE   shift, and go to state 60
    QUOTE  shift, and go to state 9
    LBIG   shift, and go to state 10
    WILD   shift, and go to state 11
    LCUR   shift, and go to state 12

    SLASH  reduce using rule 8 (rootregex)
    AMP    reduce using rule 8 (rootregex)

    regex       go to state 61
    repeat      go to state 17
    term        go to state 18
    range       go to state 19
    wild        go to state 20
    substitute  go to state 21


state 15

    9 seq: regex .
   17 repeat: regex . ASTRK
   18       | regex . PLUS
   19       | regex . QUES

    PLUS   shift, and go to state 62
    ASTRK  shift, and go to state 63
    QUES   shift, and go to state 64

    $default  reduce using rule 9 (seq)


state 16

   13 seq: alt .

    $default  reduce using rule 13 (seq)


state 17

   15 regex: repeat .

    $default  reduce using rule 15 (regex)


state 18

   14 regex: term .

    $default  reduce using rule 14 (regex)


state 19

   21 term: range .

    $default  reduce using rule 21 (term)


state 20

   22 term: wild .

    $default  reduce using rule 22 (term)


state 21

   23 term: substitute .

    $default  reduce using rule 23 (term)


state 22

    5 system: CONST ID . EQUAL system

    EQUAL  shift, and go to state 65


state 23

    0 $accept: line $end .

    $default  accept


state 24

    2 line: line system .

    $default  reduce using rule 2 (line)


state 25

    7 rootregex: NOT seq .
   10 seq: seq . regex
   12    | seq . LPAR seq RPAR
   16 alt: seq . PIPE seq

    error  shift, and go to state 6
    LPAR   shift, and go to state 59
    PIPE   shift, and go to state 60
    QUOTE  shift, and go to state 9
    LBIG   shift, and go to state 10
    WILD   shift, and go to state 11
    LCUR   shift, and go to state 12

    SLASH  reduce using rule 7 (rootregex)
    AMP    reduce using rule 7 (rootregex)

    regex       go to state 61
    repeat      go to state 17
    term        go to state 18
    range       go to state 19
    wild        go to state 20
    substitute  go to state 21


state 26

   10 seq: seq . regex
   11    | LPAR seq . RPAR
   12    | seq . LPAR seq RPAR
   16 alt: seq . PIPE seq

    error  shift, and go to state 6
    LPAR   shift, and go to state 59
    RPAR   shift, and go to state 66
    PIPE   shift, and go to state 60
    QUOTE  shift, and go to state 9
    LBIG   shift, and go to state 10
    WILD   shift, and go to state 11
    LCUR   shift, and go to state 12

    regex       go to state 61
    repeat      go to state 17
    term        go to state 18
    range       go to state 19
    wild        go to state 20
    substitute  go to state 21


state 27

   42 anychar: CONST .

    $default  reduce using rule 42 (anychar)


state 28

   43 anychar: EQUAL .

    $default  reduce using rule 43 (anychar)


state 29

   44 anychar: AMP .

    $default  reduce using rule 44 (anychar)


state 30

   45 anychar: NOT .

    $default  reduce using rule 45 (anychar)


state 31

   46 anychar: LPAR .

    $default  reduce using rule 46 (anychar)


state 32

   47 anychar: RPAR .

    $default  reduce using rule 47 (anychar)


state 33

   40 anychar: PLUS .

    $default  reduce using rule 40 (anychar)


state 34

   48 anychar: PIPE .

    $default  reduce using rule 48 (anychar)


state 35

   52 anychar: ASTRK .

    $default  reduce using rule 52 (anychar)


state 36

   37 literal: ESC . QUOTE
   51 anychar: ESC . ESC

    ESC    shift, and go to state 67
    QUOTE  shift, and go to state 68


state 37

   49 anychar: QUES .

    $default  reduce using rule 49 (anychar)


state 38

   39 anychar: UNICODE .

    $default  reduce using rule 39 (anychar)


state 39

   50 anychar: LBIG .

    $default  reduce using rule 50 (anychar)


state 40

   38 literal: RBIG .

    $default  reduce using rule 38 (literal)


state 41

   53 anychar: WILD .

    $default  reduce using rule 53 (anychar)


state 42

   54 anychar: LCUR .

    $default  reduce using rule 54 (anychar)


state 43

   55 anychar: RCUR .

    $default  reduce using rule 55 (anychar)


state 44

   41 anychar: MINUS .

    $default  reduce using rule 41 (anychar)


state 45

   57 anychar: OTHERCHAR .

    $default  reduce using rule 57 (anychar)


state 46

   56 anychar: ID .

    $default  reduce using rule 56 (anychar)


state 47

   20 term: QUOTE multiliteral . QUOTE
   35 multiliteral: multiliteral . literal

    CONST      shift, and go to state 27
    EQUAL      shift, and go to state 28
    AMP        shift, and go to state 29
    NOT        shift, and go to state 30
    LPAR       shift, and go to state 31
    RPAR       shift, and go to state 32
    PLUS       shift, and go to state 33
    PIPE       shift, and go to state 34
    ASTRK      shift, and go to state 35
    ESC        shift, and go to state 36
    QUES       shift, and go to state 37
    UNICODE    shift, and go to state 38
    QUOTE      shift, and go to state 69
    LBIG       shift, and go to state 39
    RBIG       shift, and go to state 40
    WILD       shift, and go to state 41
    LCUR       shift, and go to state 42
    RCUR       shift, and go to state 43
    MINUS      shift, and go to state 44
    OTHERCHAR  shift, and go to state 45
    ID         shift, and go to state 46

    literal  go to state 70
    anychar  go to state 49


state 48

   34 multiliteral: literal .

    $default  reduce using rule 34 (multiliteral)


state 49

   36 literal: anychar .

    $default  reduce using rule 36 (literal)


state 50

   32 regterm: ESC . RBIG
   51 anychar: ESC . ESC

    ESC   shift, and go to state 67
    RBIG  shift, and go to state 71


state 51

   33 regterm: QUOTE .

    $default  reduce using rule 33 (regterm)


state 52

   26 range: LBIG CAP . multiregterm RBIG

    CONST      shift, and go to state 27
    EQUAL      shift, and go to state 28
    AMP        shift, and go to state 29
    NOT        shift, and go to state 30
    LPAR       shift, and go to state 31
    RPAR       shift, and go to state 32
    PLUS       shift, and go to state 33
    PIPE       shift, and go to state 34
    ASTRK      shift, and go to state 35
    ESC        shift, and go to state 50
    QUES       shift, and go to state 37
    UNICODE    shift, and go to state 38
    QUOTE      shift, and go to state 51
    LBIG       shift, and go to state 39
    WILD       shift, and go to state 41
    LCUR       shift, and go to state 42
    RCUR       shift, and go to state 43
    MINUS      shift, and go to state 44
    OTHERCHAR  shift, and go to state 45
    ID         shift, and go to state 46

    multiregterm  go to state 72
    regterm       go to state 54
    anychar       go to state 55


state 53

   25 range: LBIG multiregterm . RBIG
   30 multiregterm: multiregterm . regterm

    CONST      shift, and go to state 27
    EQUAL      shift, and go to state 28
    AMP        shift, and go to state 29
    NOT        shift, and go to state 30
    LPAR       shift, and go to state 31
    RPAR       shift, and go to state 32
    PLUS       shift, and go to state 33
    PIPE       shift, and go to state 34
    ASTRK      shift, and go to state 35
    ESC        shift, and go to state 50
    QUES       shift, and go to state 37
    UNICODE    shift, and go to state 38
    QUOTE      shift, and go to state 51
    LBIG       shift, and go to state 39
    RBIG       shift, and go to state 73
    WILD       shift, and go to state 41
    LCUR       shift, and go to state 42
    RCUR       shift, and go to state 43
    MINUS      shift, and go to state 44
    OTHERCHAR  shift, and go to state 45
    ID         shift, and go to state 46

    regterm  go to state 74
    anychar  go to state 55


state 54

   29 multiregterm: regterm .

    $default  reduce using rule 29 (multiregterm)


state 55

   31 regterm: anychar .

    $default  reduce using rule 31 (regterm)


state 56

   28 substitute: LCUR ID . RCUR

    RCUR  shift, and go to state 75


state 57

    4 system: SLASH rootregex SLASH .

    $default  reduce using rule 4 (system)


state 58

    6 rootregex: rootregex AMP . rootregex

    error  shift, and go to state 6
    NOT    shift, and go to state 7
    LPAR   shift, and go to state 8
    QUOTE  shift, and go to state 9
    LBIG   shift, and go to state 10
    WILD   shift, and go to state 11
    LCUR   shift, and go to state 12

    rootregex   go to state 76
    seq         go to state 14
    regex       go to state 15
    alt         go to state 16
    repeat      go to state 17
    term        go to state 18
    range       go to state 19
    wild        go to state 20
    substitute  go to state 21


state 59

   12 seq: seq LPAR . seq RPAR

    error  shift, and go to state 6
    LPAR   shift, and go to state 8
    QUOTE  shift, and go to state 9
    LBIG   shift, and go to state 10
    WILD   shift, and go to state 11
    LCUR   shift, and go to state 12

    seq         go to state 77
    regex       go to state 15
    alt         go to state 16
    repeat      go to state 17
    term        go to state 18
    range       go to state 19
    wild        go to state 20
    substitute  go to state 21


state 60

   16 alt: seq PIPE . seq

    error  shift, and go to state 6
    LPAR   shift, and go to state 8
    QUOTE  shift, and go to state 9
    LBIG   shift, and go to state 10
    WILD   shift, and go to state 11
    LCUR   shift, and go to state 12

    seq         go to state 78
    regex       go to state 15
    alt         go to state 16
    repeat      go to state 17
    term        go to state 18
    range       go to state 19
    wild        go to state 20
    substitute  go to state 21


state 61

   10 seq: seq regex .
   17 repeat: regex . ASTRK
   18       | regex . PLUS
   19       | regex . QUES

    PLUS   shift, and go to state 62
    ASTRK  shift, and go to state 63
    QUES   shift, and go to state 64

    $default  reduce using rule 10 (seq)


state 62

   18 repeat: regex PLUS .

    $default  reduce using rule 18 (repeat)


state 63

   17 repeat: regex ASTRK .

    $default  reduce using rule 17 (repeat)


state 64

   19 repeat: regex QUES .

    $default  reduce using rule 19 (repeat)


state 65

    5 system: CONST ID EQUAL . system

    SLASH  shift, and go to state 2
    CONST  shift, and go to state 3

    system  go to state 79


state 66

   11 seq: LPAR seq RPAR .

    $default  reduce using rule 11 (seq)


state 67

   51 anychar: ESC ESC .

    $default  reduce using rule 51 (anychar)


state 68

   37 literal: ESC QUOTE .

    $default  reduce using rule 37 (literal)


state 69

   20 term: QUOTE multiliteral QUOTE .

    $default  reduce using rule 20 (term)


state 70

   35 multiliteral: multiliteral literal .

    $default  reduce using rule 35 (multiliteral)


state 71

   32 regterm: ESC RBIG .

    $default  reduce using rule 32 (regterm)


state 72

   26 range: LBIG CAP multiregterm . RBIG
   30 multiregterm: multiregterm . regterm

    CONST      shift, and go to state 27
    EQUAL      shift, and go to state 28
    AMP        shift, and go to state 29
    NOT        shift, and go to state 30
    LPAR       shift, and go to state 31
    RPAR       shift, and go to state 32
    PLUS       shift, and go to state 33
    PIPE       shift, and go to state 34
    ASTRK      shift, and go to state 35
    ESC        shift, and go to state 50
    QUES       shift, and go to state 37
    UNICODE    shift, and go to state 38
    QUOTE      shift, and go to state 51
    LBIG       shift, and go to state 39
    RBIG       shift, and go to state 80
    WILD       shift, and go to state 41
    LCUR       shift, and go to state 42
    RCUR       shift, and go to state 43
    MINUS      shift, and go to state 44
    OTHERCHAR  shift, and go to state 45
    ID         shift, and go to state 46

    regterm  go to state 74
    anychar  go to state 55


state 73

   25 range: LBIG multiregterm RBIG .

    $default  reduce using rule 25 (range)


state 74

   30 multiregterm: multiregterm regterm .

    $default  reduce using rule 30 (multiregterm)


state 75

   28 substitute: LCUR ID RCUR .

    $default  reduce using rule 28 (substitute)


state 76

    6 rootregex: rootregex . AMP rootregex
    6          | rootregex AMP rootregex .

    $default  reduce using rule 6 (rootregex)


state 77

   10 seq: seq . regex
   12    | seq . LPAR seq RPAR
   12    | seq LPAR seq . RPAR
   16 alt: seq . PIPE seq

    error  shift, and go to state 6
    LPAR   shift, and go to state 59
    RPAR   shift, and go to state 81
    PIPE   shift, and go to state 60
    QUOTE  shift, and go to state 9
    LBIG   shift, and go to state 10
    WILD   shift, and go to state 11
    LCUR   shift, and go to state 12

    regex       go to state 61
    repeat      go to state 17
    term        go to state 18
    range       go to state 19
    wild        go to state 20
    substitute  go to state 21


state 78

   10 seq: seq . regex
   12    | seq . LPAR seq RPAR
   16 alt: seq . PIPE seq
   16    | seq PIPE seq .

    error  shift, and go to state 6
    LPAR   shift, and go to state 59
    QUOTE  shift, and go to state 9
    LBIG   shift, and go to state 10
    WILD   shift, and go to state 11
    LCUR   shift, and go to state 12

    error  [reduce using rule 16 (alt)]
    SLASH  reduce using rule 16 (alt)
    AMP    reduce using rule 16 (alt)
    LPAR   [reduce using rule 16 (alt)]
    RPAR   reduce using rule 16 (alt)
    PIPE   reduce using rule 16 (alt)
    QUOTE  [reduce using rule 16 (alt)]
    LBIG   [reduce using rule 16 (alt)]
    WILD   [reduce using rule 16 (alt)]
    LCUR   [reduce using rule 16 (alt)]

    regex       go to state 61
    repeat      go to state 17
    term        go to state 18
    range       go to state 19
    wild        go to state 20
    substitute  go to state 21


state 79

    5 system: CONST ID EQUAL system .

    $default  reduce using rule 5 (system)


state 80

   26 range: LBIG CAP multiregterm RBIG .

    $default  reduce using rule 26 (range)


state 81

   12 seq: seq LPAR seq RPAR .

    $default  reduce using rule 12 (seq)
